@@ -64,8 +64,10 @@ public class ConnectionLoginHandler {
             notifyDuplicateLogin(client, userId);
             client.set("user", user);
             
-            // 재접속 시 기존 참여 방을 한 번에 검증하고 재입장 처리
-            roomJoinHandler.handleReconnectRooms(client, userRooms.get(userId));
+            userRooms.get(userId).forEach(roomId -> {
+                // 재접속 시 기존 참여 방 재입장 처리
+                roomJoinHandler.handleJoinRoom(client, roomId);
+            });
             
             connectedUsers.set(userId, user);
 
@@ -92,7 +94,9 @@ public class ConnectionLoginHandler {
                 return;
             }
             
-            roomLeaveHandler.handleDisconnectRooms(client, userRooms.get(userId));
+            userRooms.get(userId).forEach(roomId -> {
+                roomLeaveHandler.handleLeaveRoom(client, roomId);
+            });
             String socketId = client.getSessionId().toString();
             
             // 해당 사용자의 현재 활성 연결인 경우에만 정리
@@ -155,7 +159,7 @@ public class ConnectionLoginHandler {
                 "timestamp", System.currentTimeMillis()
         ));
         
-        Thread.ofVirtual().name("duplicate-login-notification").start(() -> {
+        new Thread(() -> {
             try {
                 Thread.sleep(Duration.ofSeconds(10));
                 existingClient.sendEvent(SESSION_ENDED, Map.of(
